# dcs2

./: CMakeLists.txt  README.md  VERSIONS.cmake  dcs.sh  dcs2.sh  run-dcs.sh  update-log.txt
.github/workflows/: auto-update.yml  fedora-42.yml  rocky-10.yml  ubuntu-25.04.yml
cmake/: FindBLIS.cmake  FindGMP.cmake  FindGMSH.cmake  FindHDF5.cmake  FindLIBFLAME.cmake  FindMPFR.cmake  FindMUMPS.cmake  FindOCCT.cmake  FindP4EST.cmake  FindPETSC.cmake  FindSCALAPACK.cmake  FindSLEPSC.cmake  FindSUITESPARSE.cmake  FindTBB.cmake  FindTCL.cmake  FindTK.cmake  FindTRILINOS.cmake  FindVTK.cmake  aocl-utils.cmake  blis.cmake  boost.cmake  dealii.cmake  gmp.cmake  gmsh.cmake  hdf5.cmake  lapack.cmake  libflame.cmake  libraries.json  mpfr.cmake  mumps.cmake  ninja.cmake  occt.cmake  p4est.cmake  petsc.cmake  scalapack.cmake  slepc.cmake  suitesparse.cmake  tbb.cmake  tcl.cmake  tk.cmake  (+2 more)
cmake/find/: FindADOLC.cmake  FindAMD-AOCL-UTILS.cmake  FindAMD-BLIS.cmake  FindAMD-LIBFLAME.cmake  FindAMD-MUMPS.cmake  FindAMD-SCALAPACK.cmake  FindARBORX.cmake  FindARPACK-NG.cmake  FindASSIMP.cmake  FindBLIS.cmake  FindCGAL.cmake  FindFLTK.cmake  FindGINKGO.cmake  FindGMP.cmake  FindGMSH.cmake  FindGSL.cmake  FindHDF5.cmake  FindHYPRE.cmake  FindLIBFLAME.cmake  FindMETIS.cmake  FindMKL-ScaLAPACK.cmake  FindMPFR.cmake  FindMUMPS.cmake  FindMUPARSER.cmake  FindNETCDF.cmake  FindOCCT.cmake  FindP4EST.cmake  FindPARMETIS.cmake  FindPETSC.cmake  FindSCALAPACK.cmake  FindSLEPC.cmake  FindSUITESPARSE.cmake  FindSUNDIALS.cmake  FindSUPERLU_DIST.cmake  FindSYMENGINE.cmake  FindTBB.cmake  FindTCL.cmake  FindTK.cmake  FindTRILINOS.cmake  FindVTK.cmake  (+1 more)
cmake/modules/: build_autotools_subproject.cmake  build_cmake_subproject.cmake
dependencies/: debian.sh  fedora.sh  rocky.sh  ubuntu.sh
git/: CMakeLists.txt  curl.cmake  git.cmake
mold/: CMakeLists.txt  libraries.json  mold.cmake
ninja/: CMakeLists.txt  libraries.json  ninja.cmake
scripts/: add_to_path.sh  create_symlink.sh  dcs2-one-line-install.sh  install_aocc.sh  install_cmake.sh  install_mold.sh  install_ninja.sh  resolve_dependencies.py  select_packages.py  select_version.py  tui.py  tui.sh  update_packages.py
